# incident-scribe

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: example_output.md  sample_thread.json  sample_thread.txt
incident_scribe/: __init__.py  cli.py  parser.py  prompts.py  schema.py  scribe.py
incident_scribe/integrations/: markdown_writer.py  slack_export.py
incident_scribe/patterns/: compensating.py  event_sourcing.py
tests/: test_parser.py  test_schema.py
tests/fixtures/: sample_thread.json
