[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "incident-scribe"
version = "1.0.0"
description = "Slack thread → structured incident report, powered by Claude"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Ajin Baby", email = "ajin@cloudandsre.com" }]
keywords = ["sre", "incident-response", "ai", "claude", "postmortem", "blameless"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
incident-scribe = "incident_scribe.cli:main"

[project.urls]
Homepage = "https://cloudandsre.com"
Repository = "https://github.com/ajinb/incident-scribe"
Issues = "https://github.com/ajinb/incident-scribe/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
